Changed the styling a bit

--- a/index.html
+++ b/index.html
@@ -10,25 +10,28 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div class="hero">
-            <div class="header">
-                <div class="header-logo">Cool Logo</div>
-                <ul class="header-links">
-                    <li><a href="#">Link One</a></li>
-                    <li><a href="#">Link Two</a></li>
-                    <li><a href="#">Link Three</a></li>
-                </ul>
-            </div>
-
-            <div class="article-container">
-                <div class="article-left">
-                    <div class="article-title">Wow! This is a nice website!</div>
-                    <div class="article-text">It has some cool text too! Isn't that amazing?</div>
-                    <button class="sign-up">Sign up</button>
+        <div class="head-section">
+            <div class="section wrapper">
+                <div class="header">
+                    <div class="header-logo">Cool Logo</div>
+                    <ul class="header-links">
+                        <li><a href="#">Link One</a></li>
+                        <li><a href="#">Link Two</a></li>
+                        <li><a href="#">Link Three</a></li>
+                    </ul>
                 </div>
-                <img class="article-img" src="./images/02.png" alt="">
+        
+                <div class="hero-container">
+                    <div class="hero-left">
+                        <div class="hero-title">This website is awesome</div>
+                        <div class="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                        <button class="hero-btn">Sign up</button>
+                    </div>
+                    <div class="hero-svg"></div>
+                </div>
             </div>
         </div>
+
 
         <div class="info">
             <div class="info-title">Placeholder text!</div>
