--- a/index.html
+++ b/index.html
@@ -32,54 +32,49 @@
             </div>
         </div>
 
-
-        <div class="info">
+        <div class="info-section">
             <div class="info-title">Placeholder text!</div>
             <div class="info-container">
                 <div class="item">
-                    <img class="item-img" src="./images/01.png" alt="">
+                    <img class="item-img" src="./images/peony.jpg" alt="">
                     <div class="item-text">Some text 1...</div>
                 </div>
                 <div class="item">
-                    <img class="item-img" src="./images/01.png" alt="">
+                    <img class="item-img" src="./images/chamomile.jpg" alt="">
                     <div class="item-text">Some text 2...</div>
                 </div>
                 <div class="item">
-                    <img class="item-img" src="./images/01.png" alt="">
+                    <img class="item-img" src="./images/lilac.jpg" alt="">
+                    <div class="item-text">Some text 3...</div>
+                </div>
+                <div class="item">
+                    <img class="item-img" src="./images/hydrangea.jpg" alt="">
                     <div class="item-text">Some text 3...</div>
                 </div>
             </div>
         </div>
 
-        <div class="quote">
+        <div class="quote-section">
             <div class="quote-container">
                 <div class="quote-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum incidunt ab quaerat libero in sapiente, tempore voluptatum eaque, sint dolorem nemo dignissimos inventore? Quasi odio veritatis non neque cumque sit?</div>
                 <div class="quote-author">- Some dude</div>
             </div>
         </div>
 
-        <div class="form">
-            <div class="form-container">
-                <div class="form-info">
-                    <div class="form-header">Time to sign up!</div>
-                    <div class="form-text">Sign up right now by filling out this form!</div>
-                </div>
-
-                <div class="form-content">
-                    <label class="email" for="email-field">
-                        Email:
-                        <input id="email-field" type="email">
-                    </label>
-                    <label class="password" for="password-field">
-                        Password:
-                        <input id="password-field" type="password">
-                    </label>
-                    <button>Sign up</button>
+        <div class="form-section">
+            <div class="wrapper">
+                <div class="form-container">
+                    <div class="form-info">
+                        <div class="form-title">Time to sign up!</div>
+                        <div class="form-text">Sign up right now by filling out this form!</div>
+                    </div>
+    
+                    <button class="form-btn">Sign up</button>
                 </div>
             </div>
         </div>
 
-        <div class="footer">
+        <div class="footer-section">
             Copyright @ The Odin Project 2023
         </div>
     </body>
