--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <div class="header">
                     <div class="header-logo">Cool Logo</div>
                     <ul class="header-links">
-                        <li><a href="#">Link One</a></li>
-                        <li><a href="#">Link Two</a></li>
-                        <li><a href="#">Link Three</a></li>
+                        <li><a href="#">link one</a></li>
+                        <li><a href="#">link two</a></li>
+                        <li><a href="#">link three</a></li>
                     </ul>
                 </div>
         
@@ -33,40 +33,44 @@
         </div>
 
         <div class="info-section">
-            <div class="info-title">Placeholder text!</div>
-            <div class="info-container">
-                <div class="item">
-                    <img class="item-img" src="./images/peony.jpg" alt="">
-                    <div class="item-text">Some text 1...</div>
-                </div>
-                <div class="item">
-                    <img class="item-img" src="./images/chamomile.jpg" alt="">
-                    <div class="item-text">Some text 2...</div>
-                </div>
-                <div class="item">
-                    <img class="item-img" src="./images/lilac.jpg" alt="">
-                    <div class="item-text">Some text 3...</div>
-                </div>
-                <div class="item">
-                    <img class="item-img" src="./images/hydrangea.jpg" alt="">
-                    <div class="item-text">Some text 3...</div>
+            <div class="section wrapper">
+                <div class="info-title">Some random information</div>
+                <div class="info-container">
+                    <div class="item">
+                        <img class="item-img" src="./images/peony.jpg" alt="">
+                        <div class="item-text">This is some text under an image of a peony flower.</div>
+                    </div>
+                    <div class="item">
+                        <img class="item-img" src="./images/chamomile.jpg" alt="">
+                        <div class="item-text">This is also text, but this time it's under an image of chamomiles.</div>
+                    </div>
+                    <div class="item">
+                        <img class="item-img" src="./images/lilac.jpg" alt="">
+                        <div class="item-text">Another piece of text under an image of lilac flowers.</div>
+                    </div>
+                    <div class="item">
+                        <img class="item-img" src="./images/hydrangea.jpg" alt="">
+                        <div class="item-text">Text under a picture of hydrangea flowers.</div>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="quote-section">
-            <div class="quote-container">
-                <div class="quote-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum incidunt ab quaerat libero in sapiente, tempore voluptatum eaque, sint dolorem nemo dignissimos inventore? Quasi odio veritatis non neque cumque sit?</div>
-                <div class="quote-author">- Some dude</div>
+            <div class="section wrapper">
+                <div class="quote-container">
+                    <div class="quote-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum incidunt ab quaerat libero in sapiente, tempore voluptatum eaque, sint dolorem nemo dignissimos inventore? Quasi odio veritatis non neque cumque sit?</div>
+                    <div class="quote-author">- Some dude</div>
+                </div>
             </div>
         </div>
 
         <div class="form-section">
-            <div class="wrapper">
+            <div class="section wrapper">
                 <div class="form-container">
                     <div class="form-info">
                         <div class="form-title">Time to sign up!</div>
-                        <div class="form-text">Sign up right now by filling out this form!</div>
+                        <div class="form-text">Sign up right now by clicking that button right over there!</div>
                     </div>
     
                     <button class="form-btn">Sign up</button>
